<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            app:srcCompat="@drawable/placeholder_no_flag"
            android:id="@+id/iv_cellCapitals_flag"
            android:contentDescription="@string/country_flag"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/tv_cellCapitals_capital"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cellCapitals_country"
            app:layout_constraintDimensionRatio="h,1:1"/>

    <TextView
            android:text="@string/capital"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellCapitals_capital"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_cellCapitals_flag"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/country"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellCapitals_country"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_cellCapitals_capital"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_cellCapitals_flag"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>