<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_cellWeatherItem_tempMax"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_cellWeatherItem_tempMaxTitle"
            app:layout_constraintEnd_toEndOf="@+id/tv_cellWeatherItem_tempMaxTitle"
            app:layout_constraintStart_toStartOf="@+id/tv_cellWeatherItem_tempMaxTitle"
            android:contentDescription="@string/temp_max"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_cellWeatherItem_time"
            android:contentDescription="@string/time"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_cellWeatherItem_timeTitle"
            app:layout_constraintStart_toStartOf="@+id/tv_cellWeatherItem_timeTitle"
            app:layout_constraintEnd_toEndOf="@+id/tv_cellWeatherItem_timeTitle"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_cellWeatherItem_dayTime"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_cellWeatherItem_date"
            app:layout_constraintEnd_toEndOf="@+id/tv_cellWeatherItem_date"
            app:layout_constraintStart_toStartOf="@+id/tv_cellWeatherItem_date"
            android:contentDescription="@string/day_time"/>

    <TextView
            android:text="@string/temp_max"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellWeatherItem_tempMaxValue"
            app:layout_constraintEnd_toEndOf="@+id/tv_cellWeatherItem_tempMaxTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_cellWeatherItem_tempMax"
            app:layout_constraintStart_toStartOf="@+id/tv_cellWeatherItem_tempMaxTitle"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_cellWeatherItem_tempMin"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_cellWeatherItem_tempMinTitle"
            app:layout_constraintEnd_toEndOf="@+id/tv_cellWeatherItem_tempMinTitle"
            app:layout_constraintStart_toStartOf="@+id/tv_cellWeatherItem_tempMinTitle"
            android:contentDescription="@string/temp_min"/>

    <TextView
            android:text="@string/temp_min"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellWeatherItem_tempMinValue"
            app:layout_constraintEnd_toEndOf="@+id/tv_cellWeatherItem_tempMinTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_cellWeatherItem_tempMin"
            app:layout_constraintStart_toStartOf="@+id/tv_cellWeatherItem_tempMinTitle"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:text="@string/day"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellWeatherItem_date"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/day_time"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellWeatherItem_day"
            app:layout_constraintEnd_toEndOf="@+id/tv_cellWeatherItem_date"
            app:layout_constraintStart_toStartOf="@+id/tv_cellWeatherItem_date"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_cellWeatherItem_dayTime"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"/>

    <TextView
            android:text="@string/precipitation"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellWeatherItem_precipitationTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            />

    <TextView
            android:text="@string/temp_max"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellWeatherItem_tempMaxTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_cellWeatherItem_tempMinTitle"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_cellWeatherItem_timeTitle"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            android:text="@string/temp_min"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellWeatherItem_tempMinTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_cellWeatherItem_precipitationTitle"
            android:layout_marginEnd="8dp"
            />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_cellWeatherItem_precipitation"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_cellWeatherItem_precipitationTitle"
            app:layout_constraintEnd_toEndOf="@+id/tv_cellWeatherItem_precipitationTitle"
            app:layout_constraintStart_toStartOf="@+id/tv_cellWeatherItem_precipitationTitle"
            android:contentDescription="@string/precipitation"/>

    <TextView
            android:text="@string/precipitation"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellWeatherItem_precipitationValue"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_cellWeatherItem_precipitation"
            app:layout_constraintEnd_toEndOf="@+id/tv_cellWeatherItem_precipitationTitle"
            app:layout_constraintStart_toStartOf="@+id/tv_cellWeatherItem_precipitationTitle"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:text="@string/time"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellWeatherItem_timeTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_cellWeatherItem_date"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/time"
            android:singleLine="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellWeatherItem_timeValue"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_cellWeatherItem_time"
            app:layout_constraintEnd_toEndOf="@+id/tv_cellWeatherItem_timeTitle"
            app:layout_constraintStart_toStartOf="@+id/tv_cellWeatherItem_timeTitle"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>